# dema-rc

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  README.md  index.html  meson.build  meson_options.txt  mkdocs.yml  sitemap.xml
.ci/: Dockerfile.debian  buildroot.config
.github/workflows/: build.yml  docs.yml
.semaphore/: semaphore.yml
ci/: Dockerfile.debian
distro/: install-sc2.sh  install-sk2.sh
distro/sk2/etc/boxinit.d/: 99-demarc.rc
distro/skycontroller2/: install.sh
distro/skycontroller2/etc/boxinit.d/: 99-demarc.rc
distro/skycontroller2/etc/dema-rc/: dema-rc.conf
docs/: index.md  install-ardupilot.md  install-demarc.md  rc-channel.md
docs/assets/css/: extra.css
install-ardupilot/: index.html
install-demarc/: index.html
rc-channel/: index.html
search/: search_index.json
src/: array.c  array.h  controller.c  controller.h  demarc_signal.h  event_loop.c  event_loop.h  log.c  log.h  macro.h  main.c  meson.build  remote.c  remote.h  signal.c  util.c  util.h
subprojects/: .gitignore  c-list  c-rbtree  c-utf8
tools/: bundle-sc2.sh  bundle.sh  bundler.sh  install-sc2.sh  install-sc2P.sh  meson-check-compilation.sh  test-client-udp  valgrind.supp
