# SPDX-License-Identifier: LGPL-2.1+
# Copyright (c) 2019 Lucas De Marchi <lucas.de.marchi@gmail.com>

exe_dema_rc = executable(
    'dema-rc',
    [
      'array.c',
      'controller.c',
      'event_loop.c',
      'log.c',
      'main.c',
      'remote.c',
      'signal.c',
      'util.c',
    ],
    dependencies: [
      dep_cini,
    ],
    install: true
)
